# timetable-sync

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  compose.yaml  mkdocs.yml  requirements.txt
.github/workflows/: release.yml
backend/: Dockerfile  api_docs.py  cns.py  entrypoint.sh  noxfile.py  pyproject.toml  requirements.txt  server.py
backend/src/: dependencies.py  main.py  metrics.py  server.py
backend/src/v2/: api_docs.py  routes.py  server.py
backend/src/v3/: routes.py
bot/: Dockerfile  __main__.py  autocomplete.py  bot.py  build.sql  database.py  preferences.py  pyproject.toml  requirements.txt  requirements_dev.txt  timetable.py
bot/extensions/: preferences.py  timetable.py
bot/src/: __main__.py  autocomplete.py  bot.py  database.py
bot/src/extensions/: preferences.py  timetable.py
docs/: docs.md  index.md  timetable.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/routes/: generator.tsx  home.tsx  timetable.tsx
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
frontend/src/routes/docs/: +page.svelte
frontend/src/routes/generator/: +page.js  +page.svelte
frontend/src/routes/timetable/: +page.svelte
nginx/: default.conf.template  nginx.conf
timetable/: __init__.py  __main__.py  api.py  cache.py  cns.py  docs.py  models.py  redis.py  requirements.txt  requirements_dev.txt  server.py  types.py  utils.py
timetable/static/: script.js  style.css
timetable/templates/: course_generator.html  howto.html  modules_generator.html  timetable.html
