[project]
name = "timetable-sync-backend"
description = "TimetableSync API"
dynamic = ["version"]
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "nova" }]
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi[standard]>=0.128.4",
    "granian[uvloop]>=2.7.0",
    "msgspec>=0.20.0",
    "timetable-sync-api",
]

[project.urls]
Repository = "https://github.com/novanai/timetable-sync"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.0",
    "uv>=0.10.0",
]
nox = [
    "nox>=2026.2.9",
]

[tool.ruff]
include = ["./src/*.py", "noxfile.py"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # Error (pycodestyle)
    "W", # Warning (pycodestyle)
    "I", # isort
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TC", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PL", # Pylint
    "PERF", # Perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line-too-long
    "PLR2004", # magic-value-comparison
    "PLR0913", # too-many-arguments
    "COM812", # missing-trailing-comma
    "ANN401", # any-type
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
required-version = "~=0.10"

[tool.uv.sources]
timetable-sync-api = { git = "https://github.com/novanai/timetable-sync-api", branch = "v3" }

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
